--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,17 +4,16 @@
 	<TITLE>HBNB</TITLE>
 </HEAD>
 <BODY>
-	<H1>States</H1>
-        <UL>
-		{% for state in states|sort(attribute="name") %}
-			<LI>{{ state.id }} <B>{{ state.name }}</B>
-				<UL>
-					{% for city in cities|sort(attribute="name") %}
-					{% if city.state_id == state.id %}
-					<LI>{{ city.id }} <B>{{ city.name }}</B></LI>
-					{% endif %}{% endfor %}
-				</UL>{% endfor %}
-			</LI>
-		</UL>
-	</BODY>
+	{% if state %}
+	<H1>State: {{ state.name }}</H1>
+	<H3>Cities:</H3>
+    <UL>
+	{% for city in state.cities|sort(attribute="name") %}
+	<LI>{{ city.id }} <B>{{ city.name }}</B></LI>
+	{% endfor %}
+	</UL>
+	{% else %}
+	<H1>Not found!</H1>
+	{% endif %}
+</BODY>
 </HTML>
