--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -8,9 +8,9 @@
 	<H1>State: {{ state.name }}</H1>
 	<H3>Cities:</H3>
     <UL>
-	{% for city in state.cities|sort(attribute="name") %}
-	<LI>{{ city.id }} <B>{{ city.name }}</B></LI>
-	{% endfor %}
+		{% for city in cities %}{% if city.state_id == id %}
+	<LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+	{% endif %}{% endfor %}
 	</UL>
 	{% else %}
 	<H1>Not found!</H1>
